// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfMessagesPublishedAlarm188830A2": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of SNS messages published is too low. For troubleshooting, check why the publishers are sending less traffic.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfMessagesPublished",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfMessagesPublished",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsDeliveredAlarm2AAD9498": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of SNS messages delivered is too low. This could be because of unintentional unsubscribing of an endpoint, or because of an SNS event that causes messages to experience delay.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsDelivered",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsDelivered",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFailedAlarmB044AF65": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of failed SNS messages is too high. To troubleshoot failed notifications, enable logging to CloudWatch Logs. Checking the logs can help you find which subscribers are failing, as well as the status codes they are returning.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailed",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFailedToRedriveToDlqAlarm3C4F18D1": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor messages that couldn't be moved to a dead-letter queue. Check whether your dead-letter queue exists and that it's configured correctly. Also, verify that SNS has permissions to access the dead-letter queue. Refer to the dead-letter queue documentation (https://docs.aws.amazon.com/sns/latest/dg/sns-dead-letter-queues.html) to learn more.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailedToRedriveToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailedToRedriveToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFilteredOutInvalidAttributesAlarm6F46DF70": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid attributes or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidAttributes",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidAttributes",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFilteredOutInvalidMessageBodyAlarmB06DC882": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid message bodies, or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidMessageBody",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidMessageBody",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsRedrivenToDlqAlarm9C0E386E": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor the number of messages that are moved to a dead-letter queue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsRedrivenToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsRedrivenToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SnapshotDefaultActionsInUse 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "SnsAlarmsSnsAlarmsNumberOfMessagesPublishedAlarmF2272E5D": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "AlarmDescription": "This alarm can detect when the number of SNS messages published is too low. For troubleshooting, check why the publishers are sending less traffic.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfMessagesPublished",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "MetricName": "NumberOfMessagesPublished",
        "Namespace": "AWS/SNS",
        "OKActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SnsAlarmsSnsAlarmsNumberOfNotificationsDeliveredAlarmC0E8C0F7": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "AlarmDescription": "This alarm can detect when the number of SNS messages delivered is too low. This could be because of unintentional unsubscribing of an endpoint, or because of an SNS event that causes messages to experience delay.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsDelivered",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "MetricName": "NumberOfNotificationsDelivered",
        "Namespace": "AWS/SNS",
        "OKActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SnsAlarmsSnsAlarmsNumberOfNotificationsFailedAlarm986ADDCA": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "AlarmDescription": "This alarm can detect when the number of failed SNS messages is too high. To troubleshoot failed notifications, enable logging to CloudWatch Logs. Checking the logs can help you find which subscribers are failing, as well as the status codes they are returning.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "MetricName": "NumberOfNotificationsFailed",
        "Namespace": "AWS/SNS",
        "OKActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SnsAlarmsSnsAlarmsNumberOfNotificationsFailedToRedriveToDlqAlarm9BE6B269": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "AlarmDescription": "This alarm helps to monitor messages that couldn't be moved to a dead-letter queue. Check whether your dead-letter queue exists and that it's configured correctly. Also, verify that SNS has permissions to access the dead-letter queue. Refer to the dead-letter queue documentation (https://docs.aws.amazon.com/sns/latest/dg/sns-dead-letter-queues.html) to learn more.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailedToRedriveToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "MetricName": "NumberOfNotificationsFailedToRedriveToDlq",
        "Namespace": "AWS/SNS",
        "OKActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SnsAlarmsSnsAlarmsNumberOfNotificationsFilteredOutInvalidAttributesAlarmB4BF7084": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid attributes or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidAttributes",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidAttributes",
        "Namespace": "AWS/SNS",
        "OKActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SnsAlarmsSnsAlarmsNumberOfNotificationsFilteredOutInvalidMessageBodyAlarmA281BFED": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid message bodies, or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidMessageBody",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidMessageBody",
        "Namespace": "AWS/SNS",
        "OKActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SnsAlarmsSnsAlarmsNumberOfNotificationsRedrivenToDlqAlarmFFBC5DA0": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "AlarmDescription": "This alarm helps to monitor the number of messages that are moved to a dead-letter queue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsRedrivenToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "MetricName": "NumberOfNotificationsRedrivenToDlq",
        "Namespace": "AWS/SNS",
        "OKActions": Array [
          Object {
            "Ref": "Topic269377B75",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Topic269377B75": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfMessagesPublishedAlarm5CCE3620": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of SNS messages published is too low. For troubleshooting, check why the publishers are sending less traffic.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfMessagesPublished",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfMessagesPublished",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsDeliveredAlarm4F587BD0": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of SNS messages delivered is too low. This could be because of unintentional unsubscribing of an endpoint, or because of an SNS event that causes messages to experience delay.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsDelivered",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsDelivered",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFailedAlarm521F5219": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of failed SNS messages is too high. To troubleshoot failed notifications, enable logging to CloudWatch Logs. Checking the logs can help you find which subscribers are failing, as well as the status codes they are returning.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailed",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFailedToRedriveToDlqAlarm2A84A505": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor messages that couldn't be moved to a dead-letter queue. Check whether your dead-letter queue exists and that it's configured correctly. Also, verify that SNS has permissions to access the dead-letter queue. Refer to the dead-letter queue documentation (https://docs.aws.amazon.com/sns/latest/dg/sns-dead-letter-queues.html) to learn more.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailedToRedriveToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailedToRedriveToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFilteredOutInvalidAttributesAlarm9C710A4F": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid attributes or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidAttributes",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidAttributes",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFilteredOutInvalidMessageBodyAlarm4E58B007": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid message bodies, or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidMessageBody",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidMessageBody",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsRedrivenToDlqAlarmEBB3EAF2": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor the number of messages that are moved to a dead-letter queue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsRedrivenToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsRedrivenToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SnapshotForBucketConstruct 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfMessagesPublishedAlarm5CCE3620": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of SNS messages published is too low. For troubleshooting, check why the publishers are sending less traffic.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfMessagesPublished",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfMessagesPublished",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsDeliveredAlarm4F587BD0": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of SNS messages delivered is too low. This could be because of unintentional unsubscribing of an endpoint, or because of an SNS event that causes messages to experience delay.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsDelivered",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsDelivered",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFailedAlarm521F5219": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of failed SNS messages is too high. To troubleshoot failed notifications, enable logging to CloudWatch Logs. Checking the logs can help you find which subscribers are failing, as well as the status codes they are returning.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailed",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFailedToRedriveToDlqAlarm2A84A505": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor messages that couldn't be moved to a dead-letter queue. Check whether your dead-letter queue exists and that it's configured correctly. Also, verify that SNS has permissions to access the dead-letter queue. Refer to the dead-letter queue documentation (https://docs.aws.amazon.com/sns/latest/dg/sns-dead-letter-queues.html) to learn more.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailedToRedriveToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailedToRedriveToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFilteredOutInvalidAttributesAlarm9C710A4F": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid attributes or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidAttributes",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidAttributes",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsFilteredOutInvalidMessageBodyAlarm4E58B007": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid message bodies, or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidMessageBody",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidMessageBody",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsSnsRecommendedAlarmsNumberOfNotificationsRedrivenToDlqAlarmEBB3EAF2": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor the number of messages that are moved to a dead-letter queue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsRedrivenToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsRedrivenToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SnapshotWithExclusion 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsDeliveredAlarm2AAD9498": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of SNS messages delivered is too low. This could be because of unintentional unsubscribing of an endpoint, or because of an SNS event that causes messages to experience delay.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsDelivered",
            ],
          ],
        },
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsDelivered",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFailedAlarmB044AF65": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm can detect when the number of failed SNS messages is too high. To troubleshoot failed notifications, enable logging to CloudWatch Logs. Checking the logs can help you find which subscribers are failing, as well as the status codes they are returning.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailed",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFailedToRedriveToDlqAlarm3C4F18D1": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor messages that couldn't be moved to a dead-letter queue. Check whether your dead-letter queue exists and that it's configured correctly. Also, verify that SNS has permissions to access the dead-letter queue. Refer to the dead-letter queue documentation (https://docs.aws.amazon.com/sns/latest/dg/sns-dead-letter-queues.html) to learn more.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFailedToRedriveToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFailedToRedriveToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFilteredOutInvalidAttributesAlarm6F46DF70": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid attributes or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidAttributes",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidAttributes",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsFilteredOutInvalidMessageBodyAlarmB06DC882": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor and resolve potential problems with the publisher or subscribers. Check if a publisher is publishing messages with invalid message bodies, or if an inappropriate filter is applied to a subscriber. You can also analyze CloudWatch Logs to help find the root cause of the issue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsFilteredOut-InvalidMessageBody",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsFilteredOut-InvalidMessageBody",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicSnsRecommendedAlarmsFromAspectSnsRecommendedAlarmsFromAspectNumberOfNotificationsRedrivenToDlqAlarm9C0E386E": Object {
      "Properties": Object {
        "AlarmDescription": "This alarm helps to monitor the number of messages that are moved to a dead-letter queue.",
        "AlarmName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "TopicBFC7AF6E",
                  "TopicName",
                ],
              },
              " - NumberOfNotificationsRedrivenToDlq",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "TopicName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TopicBFC7AF6E",
                "TopicName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "NumberOfNotificationsRedrivenToDlq",
        "Namespace": "AWS/SNS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
